kubernetes/primera-imagen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primera-imagen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: primera-imagen
  template:
    metadata:
      labels:
        app: primera-imagen
    spec:
      containers:
        - name: primera-imagen
          image: kevinfrutosdev/primera-imagen:1.1
          ports:
            - containerPort: 9000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: primera-imagen
spec:
  selector:
    app: primera-imagen
  ports:
    - port: 9000
      targetPort: 9000
