kubernetes/segunda-imagen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: segunda-imagen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: segunda-imagen
  template:
    metadata:
      labels:
        app: segunda-imagen
    spec:
      containers:
        - name: segunda-imagen
          image: kevinfrutosdev/segunda-imagen:1.0
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: segunda-imagen
spec:
  selector:
    app: segunda-imagen
  ports:
    - port: 8000
      targetPort: 8000
