kubernetes/ingress-primera.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-primera
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: primera-imagen
            port:
              number: 9000
